Details page: Sliding line chart: Ensure we say "data not available" instead of not showing anything in tooltip

--- a/dash/src/index.scss
+++ b/dash/src/index.scss
@@ -222,7 +222,7 @@ body,
   font-style: italic;
   font-family: 'Gotham Book', serif;
   font-size: 1em;
-  margin-top: 5px;
+  // margin-top: 5px;
 }
 
 // Data source text
